--- a/InsertionSortStatistics.ipynb
+++ b/InsertionSortStatistics.ipynb
@@ -10,6 +10,7 @@
     "## Sorting an array using insertion sort and output of some statistics\n",
     "#### Based on Cormen et. al.: Introduction to Algorithms\n",
     "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\""
+    "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
    ]
   },
   {
