started removing useless code for insertion sort
... including time related aspects

--- a/InsertionSortVisualization.ipynb
+++ b/InsertionSortVisualization.ipynb
@@ -30,12 +30,12 @@
    "outputs": [],
    "source": [
     "# steps: format[entry1, entry2, ... ]\n",
-    "# entry = [index, [sorted], [partially sorted], [unsorted], [compared elements], [exchanged elements], time, array]\n",
-    "# [(un-,partially)sorted]: [from,to], ... (with from <= to)\n",
+    "# entry = [index, [sorted], [partially sorted], [unsorted], [compared elements], [exchanged elements], [array]]\n",
+    "# [sorted, partially sorted, unsorted]: [from,to], ... (with from <= to)\n",
     "# [compared elements]: two indexes in a list\n",
-    "# - only fill this list when global outputComparedElements == True\n",
-    "# time: time since the start of the algorithms\n",
-    "# array: in current state"
+    "# [exchanged elements]: one or two indexes in a list\n",
+    "# [array]: in current state\n",
+    "# - only fill this list when global outputComparedElements == True"
    ]
   },
   {
@@ -44,74 +44,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# todo: remove everything that is time related, also changes in indexes of steps necessary\n",
-    "from time import process_time\n",
-    "\n",
-    "\n",
     "def insertion_sort(a):\n",
     "    global steps\n",
-    "    global startTime\n",
     "    global stepsIndex\n",
-    "    global outputComparedElements\n",
     "\n",
     "    # the key is stored in an additional element at the end of the array\n",
-    "    # reason: understand comparision and exchanges in output\n",
+    "    # reason: understand comparison and exchanges in output\n",
     "    a.append(-1)\n",
     "    \n",
     "    # steps: exchanged elements used for assigned elements here\n",
     "\n",
-    "    startTime = process_time()\n",
-    "\n",
     "    # nothing yet sorted\n",
     "    stepsIndex += 1\n",
-    "    steps.append([stepsIndex, [], [], [[0,len(a)-2]], [], [], process_time() - startTime, a[:]])\n",
+    "    steps.append([stepsIndex, [], [], [[0,len(a)-2]], [], [], a[:]])\n",
     "    # first element is already partially sorted\n",
     "    stepsIndex += 1\n",
-    "    steps.append([stepsIndex, [], [[0,0]], [[1,len(a)-2]], [], [], process_time() - startTime, a[:]])\n",
+    "    steps.append([stepsIndex, [], [[0,0]], [[1,len(a)-2]], [], [], a[:]])\n",
     "    \n",
     "    for j in range(1, len(a)-1):\n",
     "        # key is stored in a[-1] = a[numberOfElementsInList]\n",
     "        a[numberOfElementsInList] = a[j]\n",
     "        if outputExchangedElements:\n",
     "            stepsIndex += 1\n",
-    "            steps.append([stepsIndex, [], [], [], [], [numberOfElementsInList], process_time() - startTime, a[:]])\n",
+    "            steps.append([stepsIndex, [], [], [], [], [numberOfElementsInList], a[:]])\n",
     "\n",
     "        i = j-1\n",
     "        while i >= 0 and a[i] > a[numberOfElementsInList]:\n",
     "            #\n",
     "            if outputComparedElements:\n",
     "                stepsIndex += 1\n",
-    "                steps.append([stepsIndex, [], [], [], [i,numberOfElementsInList], [], process_time() - startTime, a[:]])\n",
+    "                steps.append([stepsIndex, [], [], [], [i,numberOfElementsInList], [], a[:]])\n",
     "\n",
     "            a[i+1] = a[i]\n",
     "            if outputExchangedElements:\n",
     "                stepsIndex += 1\n",
-    "                #steps.append([stepsIndex, [], [], [], [], [i,i+1], process_time() - startTime, a[:]])\n",
-    "                # in fact it is a key assignment\n",
-    "                steps.append([stepsIndex, [], [], [], [], [i+1], process_time() - startTime, a[:]])\n",
+    "                steps.append([stepsIndex, [], [], [], [], [i+1], a[:]])\n",
     "\n",
     "            i -= 1\n",
     "\n",
     "        # check in last iteration?\n",
     "        if i >= 0 and outputComparedElements:\n",
     "            stepsIndex += 1\n",
-    "            steps.append([stepsIndex, [], [], [], [i,numberOfElementsInList], [], process_time() - startTime, a[:]])\n",
+    "            steps.append([stepsIndex, [], [], [], [i,numberOfElementsInList], [], a[:]])\n",
     "\n",
     "        a[i+1] = a[numberOfElementsInList]\n",
     "        # This is not correct, since key is not at that position any more\n",
     "        if outputExchangedElements:\n",
     "            stepsIndex += 1\n",
-    "            #steps.append([stepsIndex, [], [], [], [], [j,i+1], process_time() - startTime, a[:]])\n",
-    "            # in fact it is a key assignment\n",
-    "            steps.append([stepsIndex, [], [], [], [], [i+1], process_time() - startTime, a[:]])\n",
+    "            steps.append([stepsIndex, [], [], [], [], [i+1], a[:]])\n",
     "        #\n",
     "        stepsIndex += 1\n",
     "        if j < len(a)-2:\n",
-    "            steps.append([stepsIndex, [], [[0,j]], [[j+1,len(a)-2]], [], [], process_time() - startTime, a[:]])\n",
+    "            steps.append([stepsIndex, [], [[0,j]], [[j+1,len(a)-2]], [], [], a[:]])\n",
     "        else: # last loop: all elements sorted\n",
-    "            steps.append([stepsIndex, [[0,j]], [], [[j+1,len(a)-2]], [], [], process_time() - startTime, a[:]])\n",
+    "            steps.append([stepsIndex, [[0,j]], [], [[j+1,len(a)-2]], [], [], a[:]])\n",
     "\n",
-    "    return a[:-1] # do not include space for key, so remove last element"
+    "    return a[:-1] # do not include additional space for key in returned array, so remove last element"
    ]
   },
   {
@@ -149,13 +137,11 @@
    "source": [
     "steps=[]\n",
     "stepsIndex = -1 # will be incremented before usage, i.e. contains the current index of last value in steps\n",
-    "startTime = 0\n",
     "\n",
     "def reset_global_data():\n",
-    "    global steps, stepsIndex, startTime\n",
+    "    global steps, stepsIndex\n",
     "    steps=[]\n",
-    "    stepsIndex = -1\n",
-    "    startTime = 0"
+    "    stepsIndex = -1"
    ]
   },
   {
@@ -203,6 +189,8 @@
     "    #plt.axis([-1, len(steps),-1, numberOfElementsInList])\n",
     "    plt.axis([-1, len(steps),-1, numberOfElementsInList+1])\n",
     "    #plt.axis('off')\n",
+    "    plt.xlabel(\"Sorting steps\")\n",
+    "    plt.ylabel(\"Indexes of array to be sorted\")\n",
     "\n",
     "    plotSeparationGraph = True\n",
     "    separationGraphData = []\n",
@@ -214,36 +202,23 @@
     "        if len(steps[i][4]) == 0 and len(steps[i][5]) == 0:\n",
     "            # unsorted\n",
     "            for j in range(len(steps[i][3])):\n",
-    "                #plt.plot([i,i],[steps[i][3][j][0]-0.5, steps[i][3][j][1]+1-0.5],'r',linewidth=8, solid_capstyle=\"butt\")\n",
     "                plt.plot([i,i],[steps[i][3][j][0]-0.5, steps[i][3][j][1]+1-0.5],'tomato',linewidth=8, solid_capstyle=\"butt\")\n",
     "            # partially sorted\n",
     "            for j in range(len(steps[i][2])):\n",
-    "                #plt.plot([i,i],[steps[i][2][j][0]-0.5, steps[i][2][j][1]+1-0.5],'y',linewidth=8, solid_capstyle=\"butt\")\n",
     "                plt.plot([i,i],[steps[i][2][j][0]-0.5, steps[i][2][j][1]+1-0.5],'yellowgreen',linewidth=8, solid_capstyle=\"butt\")\n",
     "            # sorted\n",
     "            for j in range(len(steps[i][1])):\n",
-    "                #plt.plot([i,i],[steps[i][1][j][0]-0.5, steps[i][1][j][1]+1-0.5],'g',linewidth=8, solid_capstyle=\"butt\")\n",
     "                plt.plot([i,i],[steps[i][1][j][0]-0.5, steps[i][1][j][1]+1-0.5],'mediumseagreen',linewidth=8, solid_capstyle=\"butt\")\n",
     "\n",
     "            # plot array content\n",
-    "            plot_values(steps[i][0],list(range(numberOfElementsInList)),steps[i][7])\n",
+    "            plot_values(steps[i][0],list(range(numberOfElementsInList)),steps[i][6])\n",
     "\n",
-    "########################################\n",
-    "# Not required for insertion sort?\n",
     "            # check for separation graph and store data\n",
     "            if plotSeparationGraph:\n",
     "##                print(steps[i])\n",
     "\n",
-    "                # too many elements in one list?\n",
-    "                if len(steps[i][1]) > 1 or len(steps[i][2]) > 1:\n",
-    "                    plotSeparationGraph = False\n",
-    "\n",
-    "                # elements in both list, sorted and partially sorted?\n",
-    "                if len(steps[i][1]) >= 1 and len(steps[i][2]) >= 1:\n",
-    "                    plotSeparationGraph = False\n",
-    "                    \n",
     "                # len(steps[i][1])+len(steps[i][2]) == 1: only one of the lists contains one element\n",
-    "                elif len(steps[i][1])+len(steps[i][2]) == 1 and len(steps[i][3]) == 0:\n",
+    "                if len(steps[i][1])+len(steps[i][2]) == 1 and len(steps[i][3]) == 0:\n",
     "                    separationGraphData.append([i,numberOfElementsInList-1])\n",
     "                    \n",
     "                # len(steps[i][1])+len(steps[i][2]) == 0: both lists are empty\n",
@@ -266,74 +241,42 @@
     "                        separationGraphData.append([i,steps[i][3][0][1]])\n",
     "                    else:\n",
     "                        plotSeparationGraph = False\n",
-    "########################################\n",
-    "            \n",
+    "\n",
     "        elif outputComparedElements and len(steps[i][4]) > 0:\n",
     "            minimum = min(steps[i][4])\n",
     "            maximum = max(steps[i][4])\n",
     "            # compared elements: assumption: two elements compared\n",
-    "##            plt.plot([i,i],[minimum-0.5, minimum+1-0.5],'k')\n",
-    "##            plt.plot([i,i],[maximum-0.5, maximum+1-0.5],'k')\n",
     "            plt.plot([i,i],[minimum-0.5, minimum+1-0.5],'skyblue',linewidth=8, solid_capstyle=\"butt\")\n",
     "            plt.plot([i,i],[maximum-0.5, maximum+1-0.5],'skyblue',linewidth=8, solid_capstyle=\"butt\")\n",
     "            # plot keys\n",
-    "            plot_values(steps[i][0],[minimum,maximum],steps[i][7])\n",
+    "            plot_values(steps[i][0],[minimum,maximum],steps[i][6])\n",
     "            # plot gray line between both elements\n",
-    "            minimum = min(steps[i][4])\n",
-    "            maximum = max(steps[i][4])\n",
     "            if maximum-minimum > 1:\n",
     "                plt.plot([i,i],[minimum+1-0.5, maximum-0.5],'skyblue')\n",
-    "\n",
     "\n",
     "        elif outputExchangedElements and len(steps[i][5]) > 0:\n",
     "            minimum = min(steps[i][5])\n",
     "            maximum = max(steps[i][5])\n",
-    "            # compared elements: assumption: two elements compared\n",
-    "##            plt.plot([i,i],[minimum-0.5, minimum+1-0.5],'m')\n",
-    "##            plt.plot([i,i],[maximum-0.5, maximum+1-0.5],'m')\n",
+    "            # exchanged elements: assumption: two elements exchanged, , also works for one (assignment)\n",
     "            plt.plot([i,i],[minimum-0.5, minimum+1-0.5],'sandybrown',linewidth=8, solid_capstyle=\"butt\")\n",
     "            plt.plot([i,i],[maximum-0.5, maximum+1-0.5],'sandybrown',linewidth=8, solid_capstyle=\"butt\")\n",
     "            # plot keys\n",
-    "            plot_values(steps[i][0],[minimum,maximum],steps[i][7])\n",
+    "            plot_values(steps[i][0],[minimum,maximum],steps[i][6])\n",
     "            # plot gray line between both elements\n",
-    "            minimum = min(steps[i][5])\n",
-    "            maximum = max(steps[i][5])\n",
     "            if maximum-minimum > 1:\n",
     "                plt.plot([i,i],[minimum+1-0.5, maximum-0.5],'sandybrown')\n",
     "        \n",
-    "    # output separation graph sorted and partially sorted/unsorted\n",
-    "    # currently this feature works only correctly if\n",
-    "    # - intervals in the list are not split, e.g. [4,7] instead of [4,4],[5,7]\n",
-    "    #   - An algorithm \"combineLists\" could be implemented \n",
-    "    # - the (partially) sorted part grows from left to right\n",
-    "    #   - This also might considered in the lines above:\n",
-    "    #     attention: extreme cases completely sorted / unsorted depend of the direction\n",
-    "    #     (which currently is hard coded for sored parts growing from left to right)\n",
-    "    # It works for: bubbleSort, selectionSort, insertionSort\n",
-    "    # It does not work for: heapSort\n",
-    "##    print(separationGraphData)\n",
+    "    print(separationGraphData)\n",
     "    if plotSeparationGraph:\n",
     "        for i in range(len(separationGraphData)-1):\n",
     "            plt.plot([separationGraphData[i][0],separationGraphData[i+1][0]],\n",
     "                    [separationGraphData[i][1]+0.5,separationGraphData[i+1][1]+0.5],'bo-')\n",
     "\n",
     "    # draw horitontal lines\n",
-    "##    for i in range(numberOfElementsInList+1):\n",
-    "##        plt.hlines(xmin=-1, xmax=len(steps), y=i-0.5, color=\"lightgray\")\n",
-    "    # different for insertion sort\n",
     "    for i in range(numberOfElementsInList):\n",
     "        plt.hlines(xmin=-1, xmax=len(steps), y=i-0.5, color=\"lightgray\")\n",
     "    plt.hlines(xmin=-1, xmax=len(steps), y=numberOfElementsInList-0.5, color=\"k\")\n",
     "\n",
-    "    # final settings\n",
-    "    #plt.xlabel('Input: '+str(lu))\n",
-    "    #plt.title('Sorting results, input was: '+str(sorted_array))\n",
-    "    plt.xlabel(\"Sorting steps\")\n",
-    "    plt.ylabel(\"Indexes of array to be sorted\")\n",
-    "\n",
-    "    #plt.figure(figsize=(12,8), dpi= 100, facecolor='w', edgecolor='k')\n",
-    "    #plt.rcParams['figure.figsize'] = [12, 8]\n",
-    "    \n",
     "    # show plot\n",
     "    plt.show()"
    ]
@@ -353,7 +296,9 @@
    "source": [
     "numberOfElementsInList = 10\n",
     "ARRAY_SIZE = numberOfElementsInList\n",
+    "outputComparedElements = False\n",
     "outputComparedElements = True\n",
+    "outputExchangedElements = False\n",
     "outputExchangedElements = True"
    ]
   },
@@ -374,7 +319,8 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[[0, -1], [1, 0], [5, 1], [9, 2], [13, 3], [17, 4], [21, 5], [25, 6], [29, 7], [33, 8], [37, 9]]\n"
      ]
     },
     {
@@ -409,7 +355,8 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[[0, -1], [1, 0], [6, 1], [13, 2], [22, 3], [33, 4], [46, 5], [61, 6], [78, 7], [97, 8], [118, 9]]\n"
      ]
     },
     {
@@ -444,7 +391,8 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[[0, -1], [1, 0], [5, 1], [11, 2], [15, 3], [26, 4], [34, 5], [42, 6], [56, 7], [75, 8], [87, 9]]\n"
      ]
     },
     {
@@ -485,7 +433,8 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "After  sorting: [1, 2, 3]\n"
+      "After  sorting: [1, 2, 3]\n",
+      "[[0, -1], [1, 0], [5, 1], [11, 2]]\n"
      ]
     },
     {
