fixed error in previous manual change
fixed error in previous manual change

--- a/InsertionSort.ipynb
+++ b/InsertionSort.ipynb
@@ -9,7 +9,7 @@
     "#### For educational purposes only and not necessarily very pythonic\n",
     "## Sorting an array using insertion sort\n",
     "#### Based on Cormen et. al.: Introduction to Algorithms\n",
-    "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\""
+    "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"",
     "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
    ]
   },
