--- a/InsertionSort.ipynb
+++ b/InsertionSort.ipynb
@@ -65,7 +65,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
@@ -77,7 +86,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
@@ -89,7 +107,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting random array\n",
     "# use numpy for generating a permutation\n",
@@ -107,7 +134,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [1, 3, 2]\n",
+      "After  sorting: [1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# your test here ...\n",
     "array = [1,3,2]\n",
