--- a/InsertionsortStatistics.ipynb
+++ b/InsertionsortStatistics.ipynb
@@ -7,7 +7,7 @@
     "#### Author: Jens Liebehenschel (2021)\n",
     "#### Frankfurt University of Applied Sciences, FB2, Computer Science\n",
     "#### For educational purposes only and not necessarily very pythonic\n",
-    "## Sorting an array using insertion sort and output of some statistics\n",
+    "## Sorting an array using insertionsort and output of some statistics\n",
     "#### Based on Cormen et. al.: Introduction to Algorithms\n",
     "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"\n",
     "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
@@ -21,43 +21,43 @@
    "source": [
     "# this code contains counters for outputting statistics\n",
     "# the counters are incremented after the action to be counted happened\n",
-    "def insertion_sort(a, outputStats=True):\n",
+    "def insertionsort(a, outputStats=True):\n",
     "    # initialization of counters\n",
-    "    condCheckForLoop = 0\n",
-    "    execForLoop = 0\n",
-    "    condCheckWhileLoop = 0\n",
-    "    execWhileLoop = 0\n",
-    "    assignmentKey = 0\n",
+    "    cond_check_for_loop = 0\n",
+    "    exec_for_loop = 0\n",
+    "    cond_check_while_loop = 0\n",
+    "    exec_while_loop = 0\n",
+    "    assignment_key = 0\n",
     "    # sorting begins here\n",
     "    for j in range(1, len(a)):\n",
     "        # at beginning of every iteration the array consists of two parts\n",
     "        # sorted part: a[0:j]\n",
     "        # not yet sorted: a[j:len(a)]\n",
-    "        condCheckForLoop += 1\n",
-    "        execForLoop += 1\n",
+    "        cond_check_for_loop += 1\n",
+    "        exec_for_loop += 1\n",
     "        key = a[j]\n",
-    "        assignmentKey += 1\n",
+    "        assignment_key += 1\n",
     "        i = j-1\n",
     "        # insert key = a[j] into the right position in sorted part\n",
     "        while i >= 0 and a[i] > key:\n",
-    "            condCheckWhileLoop += 1\n",
-    "            execWhileLoop += 1\n",
+    "            cond_check_while_loop += 1\n",
+    "            exec_while_loop += 1\n",
     "            a[i+1] = a[i]\n",
-    "            assignmentKey += 1\n",
+    "            assignment_key += 1\n",
     "            i = i-1\n",
-    "        condCheckWhileLoop += 1\n",
+    "        cond_check_while_loop += 1\n",
     "        a[i+1] = key\n",
-    "        assignmentKey += 1\n",
-    "    condCheckForLoop += 1\n",
+    "        assignment_key += 1\n",
+    "    cond_check_for_loop += 1\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
     "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
-    "        print(TEXT_SPACING, \"# condition checks for-loop =\", condCheckForLoop)\n",
-    "        print(TEXT_SPACING, \"# executions for-loop =\", execForLoop)\n",
-    "        print(TEXT_SPACING, \"# condition checks while-loop =\", condCheckWhileLoop)\n",
-    "        print(TEXT_SPACING, \"# executions while-loop =\", execWhileLoop)\n",
-    "        print(TEXT_SPACING, \"# key assignments =\", assignmentKey)\n",
-    "    return a, condCheckForLoop, execForLoop, condCheckWhileLoop, execWhileLoop, assignmentKey\n"
+    "        print(TEXT_SPACING, \"# condition checks for-loop =\", cond_check_for_loop)\n",
+    "        print(TEXT_SPACING, \"# executions for-loop =\", exec_for_loop)\n",
+    "        print(TEXT_SPACING, \"# condition checks while-loop =\", cond_check_while_loop)\n",
+    "        print(TEXT_SPACING, \"# executions while-loop =\", exec_while_loop)\n",
+    "        print(TEXT_SPACING, \"# key assignments =\", assignment_key)\n",
+    "    return a, cond_check_for_loop, exec_for_loop, cond_check_while_loop, exec_while_loop, assignment_key\n"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(sorted_array)[0])"
+    "print(TEXT_AFTER_SORTING, insertionsort(sorted_array)[0])"
    ]
   },
   {
@@ -139,7 +139,7 @@
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
     "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(reverse_sorted_array)[0])"
+    "print(TEXT_AFTER_SORTING, insertionsort(reverse_sorted_array)[0])"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array)[0])"
+    "print(TEXT_AFTER_SORTING, insertionsort(array)[0])"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array)[0])"
+    "print(TEXT_AFTER_SORTING, insertionsort(array)[0])"
    ]
   },
   {
@@ -276,7 +276,7 @@
     "results = []\n",
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    sorted_array = list(range(i))\n",
-    "    results.append(insertion_sort(sorted_array, outputStats=False))\n",
+    "    results.append(insertionsort(sorted_array, outputStats=False))\n",
     "# create plot of number of elements and number of checks of conditions while-loop\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"o-\")\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
@@ -307,7 +307,7 @@
     "results = []\n",
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    reverse_sorted_array = list(range(i-1, -1, -1))\n",
-    "    results.append(insertion_sort(reverse_sorted_array, outputStats=False))\n",
+    "    results.append(insertionsort(reverse_sorted_array, outputStats=False))\n",
     "# create plot of number of elements and number of checks of conditions while-loop\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"o-\")\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
