--- a/InsertionsortVisualization.ipynb
+++ b/InsertionsortVisualization.ipynb
@@ -7,7 +7,7 @@
     "#### Author: Jens Liebehenschel (2021)\n",
     "#### Frankfurt University of Applied Sciences, FB2, Computer Science\n",
     "#### For educational purposes only and not necessarily very pythonic\n",
-    "## Sorting an array using insertion sort and visualize the single steps\n",
+    "## Sorting an array using insertionsort and visualize the single steps\n",
     "#### Based on Cormen et. al.: Introduction to Algorithms\n",
     "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"\n",
     "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insertion_sort(a):\n",
+    "def insertionsort(a):\n",
     "    global steps, separation_graph_data\n",
     "    \n",
     "    # the key to be inserted is stored in an additional element at the end of the array (a[ARRAY_SIZE])\n",
@@ -63,7 +63,7 @@
     "        if j < len(a)-2:\n",
     "            steps.append([[], [[0,j]], [[j+1,len(a)-2]], [], [], a[:]])\n",
     "        else: # last loop: all elements sorted\n",
-    "            steps.append([[[0,j]], [], [[j+1,len(a)-2]], [], [], a[:]])\n",
+    "            steps.append([[[0,j]], [], [], [], [], a[:]])\n",
     "    \n",
     "    return a[:-1] # do not include additional space for key in returned array, so remove last element"
    ]
@@ -346,7 +346,7 @@
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(sorted_array))\n",
+    "print(TEXT_AFTER_SORTING, insertionsort(sorted_array))\n",
     "output_graphical_view(ARRAY_SIZE)"
    ]
   },
@@ -380,7 +380,7 @@
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
     "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(reverse_sorted_array))\n",
+    "print(TEXT_AFTER_SORTING, insertionsort(reverse_sorted_array))\n",
     "output_graphical_view(ARRAY_SIZE)"
    ]
   },
@@ -420,7 +420,7 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array))\n",
+    "print(TEXT_AFTER_SORTING, insertionsort(array))\n",
     "output_graphical_view(ARRAY_SIZE)"
    ]
   },
@@ -455,7 +455,7 @@
     "array = [1,3,2,0]\n",
     "ARRAY_SIZE = len(array)\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array))\n",
+    "print(TEXT_AFTER_SORTING, insertionsort(array))\n",
     "output_graphical_view(ARRAY_SIZE)"
    ]
   },
