--- a/Insertionsort.ipynb
+++ b/Insertionsort.ipynb
@@ -7,7 +7,7 @@
     "#### Author: Jens Liebehenschel (2021)\n",
     "#### Frankfurt University of Applied Sciences, FB2, Computer Science\n",
     "#### For educational purposes only and not necessarily very pythonic\n",
-    "## Sorting an array using insertion sort\n",
+    "## Sorting an array using insertionsort\n",
     "#### Based on Cormen et. al.: Introduction to Algorithms\n",
     "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"\n",
     "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insertion_sort(a):\n",
+    "def insertionsort(a):\n",
     "    for j in range(1, len(a)):\n",
     "        # at beginning of every iteration the array consists of two parts\n",
     "        # sorted part: a[0:j]\n",
@@ -65,58 +65,31 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(sorted_array))"
+    "print(TEXT_AFTER_SORTING, insertionsort(sorted_array))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
     "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(reverse_sorted_array))"
+    "print(TEXT_AFTER_SORTING, insertionsort(reverse_sorted_array))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting random array\n",
     "# use numpy for generating a permutation\n",
@@ -127,28 +100,19 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array))"
+    "print(TEXT_AFTER_SORTING, insertionsort(array))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [1, 3, 2]\n",
-      "After  sorting: [1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertion_sort(array))"
+    "print(TEXT_AFTER_SORTING, insertionsort(array))"
    ]
   },
   {
