--- a/Quicksort.ipynb
+++ b/Quicksort.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sorting main function to be called\n",
+    "# main function to be called for sorting the complete array\n",
     "def sort(a):\n",
     "    return quicksort(a, 0, len(a)-1)"
    ]
