--- a/QuicksortStatistics.ipynb
+++ b/QuicksortStatistics.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sorting function to be called\n",
+    "# main function to be called for sorting the complete array\n",
     "# this code contains counters for outputting statistics\n",
     "# the counters are incremented after the action to be counted happened\n",
     "def sort(a, outputStats=True):\n",
