Changed variable names in quicksort and partition

--- a/Quicksort.ipynb
+++ b/Quicksort.ipynb
@@ -30,11 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quicksort(a, p, r):\n",
-    "    if p < r:\n",
-    "        q = partition(a, p, r)\n",
-    "        quicksort(a, p, q-1)\n",
-    "        quicksort(a, q+1, r)\n",
+    "def quicksort(a, left, right):\n",
+    "    if left < right:\n",
+    "        pos_pivot = partition(a, left, right)\n",
+    "        quicksort(a, left, pos_pivot-1)\n",
+    "        quicksort(a, pos_pivot+1, right)\n",
     "    return a"
    ]
   },
@@ -44,15 +44,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition(a, p, r):\n",
+    "def partition(a, left, right):\n",
     "    # pivot element is the element at right side of part to be sorted\n",
-    "    x = a[r]\n",
-    "    i = p-1\n",
-    "    for j in range(p, r):\n",
-    "        if a[j] <= x:\n",
+    "    pivot = a[right]\n",
+    "    i = left-1\n",
+    "    for j in range(left, right):\n",
+    "        if a[j] <= pivot:\n",
     "            i = i+1\n",
     "            a[i], a[j] = a[j], a[i]\n",
-    "    a[i+1], a[r] = a[r], a[i+1]\n",
+    "    a[i+1], a[right] = a[right], a[i+1]\n",
     "    # return position of pivot element\n",
     "    return i+1"
    ]
