--- a/QuicksortStatistics.ipynb
+++ b/QuicksortStatistics.ipynb
@@ -54,15 +54,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quicksort(a, p, r):\n",
+    "def quicksort(a, left, right):\n",
     "    global quicksort_calls, partition_calls, comparison_indexes\n",
     "    quicksort_calls += 1\n",
     "    comparison_indexes += 1\n",
-    "    if p < r:\n",
-    "        q = partition(a, p, r)\n",
+    "    if left < right:\n",
+    "        pos_pivot = partition(a, left, right)\n",
     "        partition_calls += 1\n",
-    "        quicksort(a, p, q-1)\n",
-    "        quicksort(a, q+1, r)\n",
+    "        quicksort(a, left, pos_pivot-1)\n",
+    "        quicksort(a, pos_pivot+1, right)\n",
     "    return a"
    ]
   },
@@ -72,20 +72,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition(a, p, r):\n",
+    "def partition(a, left, right):\n",
     "    global comparison_keys, exchange_keys, assignment_key, exec_for_loop\n",
     "    # pivot element is the element at right side of part to be sorted\n",
-    "    x = a[r]\n",
+    "    pivot = a[right]\n",
     "    assignment_key += 1\n",
-    "    i = p-1\n",
-    "    for j in range(p, r):\n",
+    "    i = left-1\n",
+    "    for j in range(left, right):\n",
     "        exec_for_loop += 1\n",
     "        comparison_keys += 1\n",
-    "        if a[j] <= x:\n",
+    "        if a[j] <= pivot:\n",
     "            i = i+1\n",
     "            a[i], a[j] = a[j], a[i]\n",
     "            exchange_keys += 1\n",
-    "    a[i+1], a[r] = a[r], a[i+1]\n",
+    "    a[i+1], a[right] = a[right], a[i+1]\n",
     "    exchange_keys += 1\n",
     "    # return position of pivot element\n",
     "    return i+1"
