--- a/QuicksortVisualization.ipynb
+++ b/QuicksortVisualization.ipynb
@@ -41,35 +41,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quicksort(a, p, r):\n",
+    "def quicksort(a, left, right):\n",
     "    global steps, index_last_complete_step\n",
-    "    if p < r:\n",
-    "        q = partition(a, p, r)\n",
-    "        new_state = steps[index_last_complete_step][0][:p] +\\\n",
-    "                    [PART_SORTED]*((q-1)-p+1) + [SORTED] + [PART_SORTED]*(r-(q+1)+1) +\\\n",
-    "                    steps[index_last_complete_step][0][r+1:]\n",
+    "    if left < right:\n",
+    "        pos_pivot = partition(a, left, right)\n",
+    "        new_state = steps[index_last_complete_step][0][:left] +\\\n",
+    "                    [PART_SORTED]*((pos_pivot-1)-left+1) + [SORTED] + [PART_SORTED]*(right-(pos_pivot+1)+1) +\\\n",
+    "                    steps[index_last_complete_step][0][right+1:]\n",
     "        step = [new_state, [], [], a[:]]\n",
     "        index_last_complete_step = len(steps)\n",
     "        steps.append(step)\n",
     "        \n",
-    "        quicksort(a, p, q-1)\n",
+    "        quicksort(a, left, pos_pivot-1)\n",
     "        # store state only if it has changed compared to previous one or duplicate states shall be output\n",
-    "        if steps[index_last_complete_step][0][p:q] != [SORTED]*((q-1)-p+1) or output_duplicate_states:\n",
-    "            new_state = steps[index_last_complete_step][0][:p] +\\\n",
-    "                        [SORTED]*((q-1)-p+1) + steps[index_last_complete_step][0][q:]\n",
+    "        if steps[index_last_complete_step][0][left:pos_pivot] != [SORTED]*((pos_pivot-1)-left+1) or output_duplicate_states:\n",
+    "            new_state = steps[index_last_complete_step][0][:left] +\\\n",
+    "                        [SORTED]*((pos_pivot-1)-left+1) + steps[index_last_complete_step][0][pos_pivot:]\n",
     "            step = [new_state, [], [], a[:]]\n",
     "            index_last_complete_step = len(steps)\n",
     "            steps.append(step)\n",
     "        \n",
-    "        quicksort(a, q+1, r)\n",
+    "        quicksort(a, pos_pivot+1, right)\n",
     "        # store state only if it has changed compared to previous one or duplicate states shall be output\n",
-    "        if steps[index_last_complete_step][0][q+1:r+1] != [SORTED]*(r-(q+1)+1) or output_duplicate_states:\n",
-    "            new_state = steps[index_last_complete_step][0][:q+1] +\\\n",
-    "                        [SORTED]*(r-(q+1)+1) + steps[index_last_complete_step][0][r+1:]\n",
+    "        if steps[index_last_complete_step][0][pos_pivot+1:right+1] != [SORTED]*(right-(pos_pivot+1)+1) or output_duplicate_states:\n",
+    "            new_state = steps[index_last_complete_step][0][:pos_pivot+1] +\\\n",
+    "                        [SORTED]*(right-(pos_pivot+1)+1) + steps[index_last_complete_step][0][right+1:]\n",
     "            step = [new_state, [], [], a[:]]\n",
     "            index_last_complete_step = len(steps)\n",
     "            steps.append(step)\n",
-    "\n",
     "    return a"
    ]
   },
@@ -79,19 +78,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition(a, p, r):\n",
+    "def partition(a, left, right):\n",
     "    global steps\n",
     "    # pivot element is the element at right side of part to be sorted\n",
-    "    a[ARRAY_SIZE] = a[r]\n",
-    "    i = p-1\n",
-    "    for j in range(p, r):\n",
+    "    a[ARRAY_SIZE] = a[right]\n",
+    "    i = left-1\n",
+    "    for j in range(left, right):\n",
     "        steps.append([[], [j,ARRAY_SIZE], [], a[:]])\n",
     "        if a[j] <= a[ARRAY_SIZE]:\n",
     "            i = i+1\n",
     "            a[i], a[j] = a[j], a[i]\n",
     "            steps.append([[], [], [i,j], a[:]])\n",
-    "    a[i+1], a[r] = a[r], a[i+1]\n",
-    "    steps.append([[], [], [i+1,r], a[:]])\n",
+    "    a[i+1], a[right] = a[right], a[i+1]\n",
+    "    steps.append([[], [], [i+1,right], a[:]])\n",
     "    # return position of pivot element\n",
     "    return i+1"
    ]
