--- a/Insertionsort.ipynb
+++ b/Insertionsort.ipynb
@@ -35,6 +35,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checks whether array is sorted correctly, this also works with identical keys in the array\n",
+    "def check_sorting(a):\n",
+    "    return all(a[i] <= a[i+1] for i in range(len(a)-1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +62,8 @@
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
-    "TEXT_AFTER_SORTING = \"After  sorting:\""
+    "TEXT_AFTER_SORTING = \"After  sorting:\"\n",
+    "TEXT_CHECK_SORTING = \"Sorting correct? -\""
    ]
   },
   {
@@ -63,31 +75,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertionsort(sorted_array))"
+    "a = insertionsort(sorted_array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
     "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, insertionsort(reverse_sorted_array))"
+    "a = insertionsort(reverse_sorted_array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,24 +116,28 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertionsort(array))"
+    "a = insertionsort(array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, insertionsort(array))"
+    "a = insertionsort(array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
