--- a/Quicksort.ipynb
+++ b/Quicksort.ipynb
@@ -58,6 +58,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checks whether array is sorted correctly, this also works with identical keys in the array\n",
+    "def check_sorting(a):\n",
+    "    return all(a[i] <= a[i+1] for i in range(len(a)-1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +85,8 @@
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
-    "TEXT_AFTER_SORTING = \"After  sorting:\""
+    "TEXT_AFTER_SORTING = \"After  sorting:\"\n",
+    "TEXT_CHECK_SORTING = \"Sorting correct? -\""
    ]
   },
   {
@@ -86,27 +98,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test sorting sorted array\n",
-    "sorted_array = list(range(ARRAY_SIZE))\n",
-    "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, sort(sorted_array))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -114,16 +105,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
      ]
     }
    ],
    "source": [
-    "# test sorting reversly sorted array\n",
-    "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
-    "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, sort(reverse_sorted_array))"
+    "# test sorting sorted array\n",
+    "sorted_array = list(range(ARRAY_SIZE))\n",
+    "print(TEXT_BEFORE_SORTING, sorted_array)\n",
+    "a = sort(sorted_array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
@@ -135,8 +129,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test sorting reversly sorted array\n",
+    "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
+    "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
+    "a = sort(reverse_sorted_array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
      ]
     }
    ],
@@ -150,12 +169,14 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, sort(array))"
+    "a = sort(array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +184,8 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "After  sorting: [1, 2, 3]\n"
+      "After  sorting: [1, 2, 3]\n",
+      "Sorting correct? - True\n"
      ]
     }
    ],
@@ -171,12 +193,14 @@
     "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, sort(array))"
+    "a = sort(array)\n",
+    "print(TEXT_AFTER_SORTING, a)\n",
+    "print(TEXT_CHECK_SORTING, check_sorting(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
