Updated header and minor changes

--- a/Quicksort.ipynb
+++ b/Quicksort.ipynb
@@ -4,13 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Author: Jens Liebehenschel (2021)\n",
-    "#### Frankfurt University of Applied Sciences, FB2, Computer Science\n",
-    "#### For educational purposes only and not necessarily very pythonic\n",
-    "## Sorting an array using quicksort\n",
-    "#### Based on Cormen et. al.: Introduction to Algorithms\n",
-    "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"\n",
-    "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
+    "### Copyright 2021 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
+    "### No liability or warranty; only for educational and non-commercial purposes\n",
+    "### See some basic hints for working with Jupyter notebooks in README.md\n",
+    "## Sorting an array using quicksort"
    ]
   },
   {
