--- a/Insertionsort.ipynb
+++ b/Insertionsort.ipynb
@@ -4,13 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Author: Jens Liebehenschel (2021)\n",
-    "#### Frankfurt University of Applied Sciences, FB2, Computer Science\n",
-    "#### For educational purposes only and not necessarily very pythonic\n",
-    "## Sorting an array using insertionsort\n",
-    "#### Based on Cormen et. al.: Introduction to Algorithms\n",
-    "## For execution of complete code click on \"Kernel\", then on \"Restart & Run All\"\n",
-    "## At the end of your experiments click on \"File\", then on \"Close and Halt\""
+    "### Copyright 2021 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
+    "### No liability or warranty; only for educational and non-commercial purposes\n",
+    "### See some basic hints for working with Jupyter notebooks in README.md\n",
+    "## Sorting an array using insertionsort"
    ]
   },
   {
@@ -77,7 +74,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
@@ -91,7 +98,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
@@ -105,7 +122,17 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorting correct? - True\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting random array\n",
     "# use numpy for generating a permutation\n",
@@ -125,7 +152,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [1, 3, 2]\n",
+      "After  sorting: [1, 2, 3]\n",
+      "Sorting correct? - True\n"
+     ]
+    }
+   ],
    "source": [
     "# your test here ...\n",
     "array = [1,3,2]\n",
